--- a/app/src/main/res/layout/fragment_bloggers.xml
+++ b/app/src/main/res/layout/fragment_bloggers.xml
@@ -20,6 +20,16 @@
 
         />
 
+
+    <ProgressBar
+        android:id="@+id/progressBar4"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
