--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,15 +45,24 @@
         android:id="@+id/homeErrorTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hmmm"
-       android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:text="error"
+        android:layout_gravity="center"
         android:textSize="20sp"
         android:visibility="gone"
 
         />
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"
+            />
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
