--- a/app/src/main/res/layout/fragment_profile_posts.xml
+++ b/app/src/main/res/layout/fragment_profile_posts.xml
@@ -6,13 +6,33 @@ android:id="@+id/profileRelativeLayout"
 
     android:orientation="vertical">
 
+<TextView
+    android:id="@+id/refesh"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:drawableLeft="@drawable/ic_refresh_black_24dp"
+    android:padding="5dp"
+    android:text="@string/retry"
+    android:drawablePadding="5dp"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="5dp"
+    android:visibility="gone"
 
+    />
+    <ProgressBar
+        android:id="@+id/progressBar3"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/posts_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        android:layout_margin="5dp"
-
         >
 
     </androidx.recyclerview.widget.RecyclerView>
